--- a/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -177,6 +177,7 @@ StructProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScroller
 FloatProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 Target_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 IntProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
+ScoreProjectile_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -209,23 +210,30 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile.ScoreProjectile
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Projectle.Projectle
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Target.Target
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Targetpopper.Targetpopper
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Arrow.Arrow
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/Targetpopper
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/Projectile
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/Projectle
-MRUItem3=/Game/Sounds/BackingTrack_01_Cue
-MRUItem4=/Game/Sounds/VictoryTrack_Cue
-MRUItem5=/Game/Sounds/VictoryTrack
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/Target
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem9=/Game/Sounds/BackingTrack_Cue
-MRUItem10=/Game/Sprites/Background
-MRUItem11=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/NewWidgetBlueprint
-MRUItem13=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem14=/Game/2DSideScrollerBP/Blueprints/Arrow
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/Arrow
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/Targetpopper
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/Target
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/Projectle
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/Projectile
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem6=/Game/Sounds/BackingTrack_01_Cue
+MRUItem7=/Game/Sounds/VictoryTrack_Cue
+MRUItem8=/Game/Sounds/VictoryTrack
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem10=/Game/Sounds/BackingTrack_Cue
+MRUItem11=/Game/Sprites/Background
+MRUItem12=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/NewWidgetBlueprint
+MRUItem14=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [DetailCategories]
 2DSideScrollerCharacter_C.Default=True
@@ -1312,6 +1320,22 @@ SoundWave.Concurrency=True
 SoundWave.Effects=True
 SoundWave.Priority=True
 SoundWave.Attenuation=True
+REINST_2DSideScrollerCharacter_C_43.Tick=True
+ScoreProjectile_C.Tick=True
+ScoreProjectile_C.Rendering=True
+ScoreProjectile_C.Replication=True
+ScoreProjectile_C.Input=True
+ScoreProjectile_C.Actor=True
+REINST_2DSideScrollerCharacter_C_69.Camera=True
+REINST_2DSideScrollerCharacter_C_69.Tick=True
+REINST_2DSideScrollerCharacter_C_69.None=True
+REINST_2DSideScrollerCharacter_C_69.Character=True
+REINST_2DSideScrollerCharacter_C_69.Pawn=True
+REINST_2DSideScrollerCharacter_C_69.Rendering=True
+REINST_2DSideScrollerCharacter_C_69.Replication=True
+REINST_2DSideScrollerCharacter_C_69.Input=True
+REINST_2DSideScrollerCharacter_C_69.Actor=True
+K2Node_InputTouch.Input=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Targetpopper.Targetpopper;
@@ -1339,10 +1363,10 @@ Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-2DSideScrollerCharacter_C=
-PaperCharacter=
-Character=
-Pawn=
+2DSideScrollerCharacter_C="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PaperCharacter="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Pawn="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_2DSideScrollerCharacter_C_37="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_2DSideScrollerCharacter_C_43="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance\" "
@@ -1354,7 +1378,7 @@ ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
 
 [RootWindow]
-ScreenPosition=X=-1595.000 Y=226.000
+ScreenPosition=X=1227.000 Y=344.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
