--- a/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,30 +210,26 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile.ScoreProjectile
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Projectle.Projectle
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Target.Target
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Targetpopper.Targetpopper
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Arrow.Arrow
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/Arrow
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/Targetpopper
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/Target
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/Projectle
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/Projectile
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem6=/Game/Sounds/BackingTrack_01_Cue
-MRUItem7=/Game/Sounds/VictoryTrack_Cue
-MRUItem8=/Game/Sounds/VictoryTrack
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem10=/Game/Sounds/BackingTrack_Cue
-MRUItem11=/Game/Sprites/Background
-MRUItem12=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/NewWidgetBlueprint
-MRUItem14=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/NewWidgetBlueprint
+MRUItem1=/Game/Art/Characters
+MRUItem2=/Game/Art/All_Assets
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/Target
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/Targetpopper
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/Arrow
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/Projectle
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/Projectile
+MRUItem10=/Game/Sounds/BackingTrack_01_Cue
+MRUItem11=/Game/Sounds/VictoryTrack_Cue
+MRUItem12=/Game/Sounds/VictoryTrack
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem14=/Game/Sounds/BackingTrack_Cue
+MRUItem15=/Game/Sprites/Background
+MRUItem16=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem17=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [DetailCategories]
 2DSideScrollerCharacter_C.Default=True
@@ -1336,6 +1332,25 @@ REINST_2DSideScrollerCharacter_C_69.Replication=True
 REINST_2DSideScrollerCharacter_C_69.Input=True
 REINST_2DSideScrollerCharacter_C_69.Actor=True
 K2Node_InputTouch.Input=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Targetpopper.Targetpopper;
@@ -1356,6 +1371,8 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Arrow.Arrow;
 /Game/Sounds/BackingTrack_01_Cue.BackingTrack_01_Cue=1
 /Game/Sounds/VictoryTrack.VictoryTrack=1
 /Game/2DSideScrollerBP/Blueprints/Targetpopper.Targetpopper=1
+/Game/2DSideScrollerBP/Blueprints/ScoreProjectile.ScoreProjectile=1
+/Game/Art/All_Assets.All_Assets=1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
@@ -1363,10 +1380,10 @@ Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-2DSideScrollerCharacter_C="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PaperCharacter="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Pawn="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+2DSideScrollerCharacter_C=
+PaperCharacter=
+Character=
+Pawn=
 REINST_2DSideScrollerCharacter_C_37="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_2DSideScrollerCharacter_C_43="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance\" "
@@ -2068,6 +2085,10 @@ BlueprintGraph.TimeStamp=2019.10.03-22.17.09
 BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.07.30-16.03.48
 ExternalImagePicker.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2019.10.03-22.17.35
+TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2019.10.03-22.17.31
+SequencerWidgets.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
 Input=False
@@ -2134,7 +2155,7 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
