--- a/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -212,14 +212,14 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/NewWidgetBlueprint
-MRUItem1=/Game/Art/Characters
-MRUItem2=/Game/Art/All_Assets
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/Target
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/Targetpopper
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/Arrow
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/Target
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/Arrow
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/Targetpopper
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem5=/Game/Art/All_Assets
+MRUItem6=/Game/Art/Characters
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/NewWidgetBlueprint
 MRUItem8=/Game/2DSideScrollerBP/Blueprints/Projectle
 MRUItem9=/Game/2DSideScrollerBP/Blueprints/Projectile
 MRUItem10=/Game/Sounds/BackingTrack_01_Cue
@@ -1413,7 +1413,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [DetailCategoriesAdvanced]
 ObjectProperty.Variable=False
@@ -2089,6 +2089,8 @@ TextureEditor.TimeStamp=2019.10.03-22.17.35
 TextureEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2019.10.03-22.17.31
 SequencerWidgets.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.10.03-22.17.18
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
 Input=False
@@ -2159,5 +2161,10 @@ PreserveScaleRatio=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
 
