--- a/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ Projectle_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCha
 K2Node_VariableSet=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
 Projectile_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 StructProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
-FloatProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
+FloatProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
 Target_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
 IntProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
 ScoreProjectile_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
@@ -186,6 +186,7 @@ ObjectProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScroller
 RubbishTarget_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
 RubbishPopper_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
 Score_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
+MovementComponent=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ObjectProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -211,7 +212,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -220,26 +221,26 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/Widgets/Victory
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/Target
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/Widgets/Score
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/Targetpopper
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/RubbishPopper
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
-MRUItem7=/Game/Sounds/BackingTrack_01_Cue
-MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem9=/Game/2DSideScrollerBP/Maps/Victory
-MRUItem10=/Game/Sounds/Squish
-MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem12=/Game/Art/IdleBow
-MRUItem13=/Game/Art/All_Assets
-MRUItem14=/Game/Art/Bow
-MRUItem15=/Game/Art/Characters
-MRUItem16=/Game/2DSideScrollerBP/Blueprints/Structures/SpriteStruct
-MRUItem17=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile
-MRUItem18=/Game/2DSideScroller/Sprites/Ledge
-MRUItem19=/Game/2DSideScrollerBP/Blueprints/Arrow
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/Projectle
+MRUItem1=/Game/Art/Bow
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/Widgets/Victory
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/Target
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/Widgets/Score
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/Targetpopper
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/RubbishPopper
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
+MRUItem9=/Game/Sounds/BackingTrack_01_Cue
+MRUItem10=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem11=/Game/2DSideScrollerBP/Maps/Victory
+MRUItem12=/Game/Sounds/Squish
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Art/IdleBow
+MRUItem15=/Game/Art/All_Assets
+MRUItem16=/Game/Art/Characters
+MRUItem17=/Game/2DSideScrollerBP/Blueprints/Structures/SpriteStruct
+MRUItem18=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile
+MRUItem19=/Game/2DSideScroller/Sprites/Ledge
 
 [DetailCategories]
 2DSideScrollerCharacter_C.Default=True
@@ -1524,6 +1525,42 @@ Widget.Performance=True
 Widget.Clipping=True
 Widget.Navigation=True
 Widget.Localization=True
+REINST_2DSideScrollerCharacter_C_50.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_50.Sprite=True
+REINST_2DSideScrollerCharacter_C_50.Camera=True
+REINST_2DSideScrollerCharacter_C_50.None=True
+REINST_2DSideScrollerCharacter_C_50.Physics=True
+REINST_2DSideScrollerCharacter_C_50.Collision=True
+REINST_2DSideScrollerCharacter_C_50.Lighting=True
+REINST_2DSideScrollerCharacter_C_50.Rendering=True
+REINST_2DSideScrollerCharacter_C_50.Tags=True
+REINST_2DSideScrollerCharacter_C_50.Activation=True
+REINST_2DSideScrollerCharacter_C_50.Cooking=True
+REINST_2DSideScrollerCharacter_C_50.Character=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_50.RootMotion=True
+REINST_2DSideScrollerCharacter_C_50.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_50.NavMovement=True
+REINST_2DSideScrollerCharacter_C_50.Velocity=True
+REINST_2DSideScrollerCharacter_C_50.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_50.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_50.Shape=True
+REINST_2DSideScrollerCharacter_C_50.Navigation=True
+REINST_2DSideScrollerCharacter_C_50.Pawn=True
+REINST_2DSideScrollerCharacter_C_50.Replication=True
+REINST_2DSideScrollerCharacter_C_50.Input=True
+REINST_2DSideScrollerCharacter_C_50.Actor=True
+K2Node_Timeline.GraphNodeDetail=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/RubbishPopper.RubbishPopper;
@@ -1557,10 +1594,11 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Arrow.Arrow;
 /Game/2DSideScrollerBP/Blueprints/RubbishPopper.RubbishPopper=1
 /Game/2DSideScrollerBP/Blueprints/Widgets/Victory.Victory=1
 /Game/2DSideScrollerBP/Blueprints/Widgets/Score.Score=1
+/Game/Art/Bow.Bow=1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object=
+Object="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[7]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1574,7 +1612,7 @@ PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance\
 REINST_2DSideScrollerCharacter_C_318=
 PaperSprite="\"Object.Sprite.SourceDimension\" "
 Target_C=
-PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[0]\" "
+PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[7]\" "
 Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
@@ -1584,13 +1622,15 @@ Targetpopper_C=
 Button="\"Object.Appearance.WidgetStyle\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" "
 PanelWidget=
+MovementComponent="\"Object.Velocity\" \"Object.Velocity\" "
+ActorComponent="\"Object.Velocity\" \"Object.Velocity\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
 
 [RootWindow]
-ScreenPosition=X=-2261.000 Y=303.000
+ScreenPosition=X=-1798.000 Y=361.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
