--- a/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,8 +102,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.124356
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.875643
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
@@ -120,6 +120,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -420,12 +422,91 @@ PaperSpriteActor.Actor=True
 2DSideScrollerCharacter_C.Shape=True
 2DSideScrollerCharacter_C.Navigation=True
 2DSideScrollerCharacter_C.Materials=True
+Targetpopper_C.TransformCommon=True
+Targetpopper_C.Rendering=True
+Targetpopper_C.Replication=True
+Targetpopper_C.Input=True
+Targetpopper_C.Actor=True
+Targetpopper_C.Tick=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperSpriteComponent.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=False
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+Projectle_C.Tick=True
+Projectle_C.Default=True
+Projectle_C.Rendering=True
+Projectle_C.Replication=True
+Projectle_C.Input=True
+Projectle_C.Actor=True
+Target_C.Collision=True
+K2Node_Timeline.GraphNodeDetail=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
+K2Node_VariableGet.DefaultValueCategory=True
+2DSideScrollerCharacter_C.Variable=True
+2DSideScrollerCharacter_C.Sockets=True
+2DSideScrollerCharacter_C.ComponentReplication=True
+2DSideScrollerCharacter_C.Events=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sound=True
+AudioComponent.Attenuation=True
+AudioComponent.AttenuationDistance=True
+AudioComponent.Filter=True
+AudioComponent.AttenuationSpatialization=True
+AudioComponent.Attachment=True
+AudioComponent.AttenuationAirAbsorption=True
+AudioComponent.AttenuationListenerFocus=True
+AudioComponent.Modulation=True
+AudioComponent.AttenuationOcclusion=True
+AudioComponent.Concurrency=True
+AudioComponent.Tags=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Activation=True
+AudioComponent.Variable=True
+AudioComponent.Cooking=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=80.000 Y=70.000
+ScreenPosition=X=-1998.000 Y=297.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -443,7 +524,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/mile_/Documents/GitHub/NHS-project/MyProject12/Content/2DSideScrollerBP/Maps
+UNR=D:/Users/Katya/Documents/GitHub/NHS-project/MyProject12/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/mile_/Documents/GitHub/NHS-project/MyProject12/Content/
 FBX=../../../../../../Users/mile_/Documents/GitHub/NHS-project/MyProject12/Content/
 FBXAnim=../../../../../../Users/mile_/Documents/GitHub/NHS-project/MyProject12/Content/
@@ -1115,11 +1196,46 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/Target
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
+MRUItem1=/Game/Art/Watermelon
+MRUItem2=/Game/Art/Rubbish3
+MRUItem3=/Game/Art/Rubbish2
+MRUItem4=/Game/Art/Rubbish1
+MRUItem5=/Game/Art/Banana
+MRUItem6=/Game/Art/All_Assets_Sprite_18
+MRUItem7=/Game/Art/All_Assets_Sprite_15
+MRUItem8=/Game/Art/All_Assets_Sprite_14
+MRUItem9=/Game/Art/All_Assets_Sprite_13
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/Target
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Projectle
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/Targetpopper
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/RubbishTarget.RubbishTarget=1
+/Game/2DSideScrollerBP/Blueprints/Projectle.Projectle=1
+/Game/2DSideScrollerBP/Blueprints/Targetpopper.Targetpopper=1
+/Game/2DSideScrollerBP/Blueprints/Target.Target=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
+/Game/Art/All_Assets_Sprite_15.All_Assets_Sprite_15=1
+/Game/Art/All_Assets_Sprite_14.All_Assets_Sprite_14=1
+/Game/Art/Rubbish3.Rubbish3=1
+/Game/Art/Watermelon.Watermelon=1
+/Game/Art/Rubbish2.Rubbish2=1
+/Game/Art/Rubbish1.Rubbish1=1
+/Game/Art/Banana.Banana=1
+/Game/Art/All_Assets_Sprite_18.All_Assets_Sprite_18=1
+/Game/Art/All_Assets_Sprite_13.All_Assets_Sprite_13=1
+
+[DetailCustomWidgetExpansion]
+PaperSpriteActor=PaperSpriteActor.Collision.Collision,
+PaperSprite=PaperSprite.Collision.Collision,
+
+[DetailCategoriesAdvanced]
+SphereComponent.Shape=True
+
+[DetailPropertyExpansion]
+PaperSprite="\"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices.Vertices[21]\" "
+Object=
 
 
